--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.4.1",
     "microcms-js-sdk": "^1.2.0",
     "next": "11.1.2",
     "react": "17.0.2",
