--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.4.1",
+    "date-fns": "^2.25.0",
     "microcms-js-sdk": "^1.2.0",
     "next": "11.1.2",
     "react": "17.0.2",
